wp-content/themes/mk-group/src/app/sector/sector.component.css
section.sector {
    padding-top: 9rem;
}
section.sector .companies-wrapper .single-company {
    text-align: center;
}
section.sector .companies-wrapper .single-company:hover {
    cursor: pointer;
}
section.sector .companies-wrapper .single-company .logo-container {
    padding: 1rem 1rem;
}
section.video-sector {
    display: flex;
    width: 100%;
    height: 100%;
}
section.video-sector video {
    width: 100%;
}
section.video-sector .agrieurope-sector {
    width: 100%;
    height: 100%;
    overflow: hidden;
}
.logo-container img {
    max-height: 160px;
}
.preload-video {
    display: flex;
    width: 100%;
    height: 100%;
    background: #fff;
}

